--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13788,6 +13788,11 @@
 "~^/doc/borges/favicon.ico$" "/static/img/favicon.ico";
 "~^/doc/sociology/favicon.ico$" "/static/img/favicon.ico";
 "~^/Intelligence$" "/doc/iq/index";
+"~^/Big-Sleep.*$" "https://github.com/lucidrains/big-sleep";
+"~^/doc/gpt-3.5/rl/2022-hume.pdf.*$" "/doc/ai/nn/transformer/gpt/3/index";
+"~^/doc/psycology$" "/doc/psychology/index";
+"~^/doc/rotten.com/library/bio/pornographers/tml.*$" "/doc/rotten.com/library/bio/pornographers/index.html";
+"~^/Fulltext.*$" "/fulltext";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
