--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9448,3 +9448,7 @@ default "";
 "~^/doc/psychology/smell/2019-kraft.pdf.*$" "/doc/psychology/smell/perfume/2019-kraft.pdf";
 "~^/doc/psychology/smell/2007-shiner.pdf.*$" "/doc/psychology/smell/perfume/2007-shiner.pdf";
 "~^/doc/psychology/smell/2019-kraft-figure2-schematicrepresentationofduneperfume.jpg.*$" "/doc/psychology/smell/perfume/2019-kraft-figure2-schematicrepresentationofduneperfume.jpg";
+"~^/doc/economics/1981-myerson.pdf.*$" "/doc/economics/mechanism-design/1981-myerson.pdf";
+"~^/doc/economics/2019-chen-6.pdf.*$" "/doc/economics/mechanism-design/2019-chen-6.pdf";
+"~^/doc/economics/2021-white.pdf.*$" "/doc/economics/mechanism-design/2021-white.pdf";
+"~^/doc/economics/2021-cason.pdf.*$" "/doc/economics/mechanism-design/2021-cason.pdf";
