--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9452,3 +9452,12 @@ default "";
 "~^/doc/economics/2019-chen-6.pdf.*$" "/doc/economics/mechanism-design/2019-chen-6.pdf";
 "~^/doc/economics/2021-white.pdf.*$" "/doc/economics/mechanism-design/2021-white.pdf";
 "~^/doc/economics/2021-cason.pdf.*$" "/doc/economics/mechanism-design/2021-cason.pdf";
+"~^/doc/ai/nn/2022-grand.pdf.*$" "/doc/ai/nn/rnn/2022-grand.pdf";
+"~^/doc/psychology/2001-bloom.pdf.*$" "/doc/psychology/linguistics/2001-bloom.pdf";
+"~^/doc/psychology/2020-nichols.pdf.*$" "/doc/psychology/linguistics/2020-nichols.pdf";
+"~^/doc/psychology/2019-antoniou.pdf.*$" "/doc/psychology/linguistics/2019-antoniou.pdf";
+"~^/doc/psychology/2014-chanturia.pdf.*$" "/doc/psychology/linguistics/2014-chanturia.pdf";
+"~^/doc/psychology/1994-fisher.pdf.*$" "/doc/psychology/linguistics/1994-fisher.pdf";
+"~^/doc/psychology/1992-rymer.pdf.*$" "/doc/psychology/linguistics/1992-rymer.pdf";
+"~^/doc/ai/nn/2020-thompson.pdf.*$" "/doc/ai/nn/rnn/2020-thompson.pdf";
+"~^/doc/psychology/2017-mukadam.pdf.*$" "/doc/psychology/linguistics/2017-mukadam.pdf";
