--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9461,3 +9461,12 @@ default "";
 "~^/doc/psychology/1992-rymer.pdf.*$" "/doc/psychology/linguistics/1992-rymer.pdf";
 "~^/doc/ai/nn/2020-thompson.pdf.*$" "/doc/ai/nn/rnn/2020-thompson.pdf";
 "~^/doc/psychology/2017-mukadam.pdf.*$" "/doc/psychology/linguistics/2017-mukadam.pdf";
+"~^/doc/psychology/1985-sun.pdf.*$" "/doc/psychology/linguistics/1985-sun.pdf";
+"~^/doc/economics/mechanism-design/1981-myerson.pdf.*$" "/doc/economics/mechanism-design/auction/1981-myerson.pdf";
+"~^/doc/economics/mechanism-design/1982-rassenti.pdf.*$" "/doc/economics/mechanism-design/auction/1982-rassenti.pdf";
+"~^/doc/economics/1973-cheung.pdf.*$" "/doc/economics/mechanism-design/1973-cheung.pdf";
+"~^/doc/newest/[a-hj-z].*$" "/doc/newest/index";
+"~^/doc/psychology/linguistics/2017-mukadam.pdf.*$" "/doc/psychology/linguistics/bilingual/2017-mukadam.pdf";
+"~^/doc/psychology/linguistics/2019-antoniou.pdf.*$" "/doc/psychology/linguistics/bilingual/2019-antoniou.pdf";
+"~^/doc/psychology/linguistics/2020-nichols.pdf.*$" "/doc/psychology/linguistics/bilingual/2020-nichols.pdf";
+"~^/doc/psychology/1972-larson-becomingbilingual.pdf.*$" "/doc/psychology/linguistics/bilingual/1972-larson-becomingbilingual.pdf";
