--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13846,6 +13846,18 @@
 "~^/SMPy$" "/smpy";
 "~^/doc/psychology/favicon.ico$" "/static/img/favicon.ico";
 "~^/tankC$" "/tank";
+"~^/doc/rl/2020-brown.pdf.*$" "https://arxiv.org/abs/2005.14165#openai";
+"~^/Black$" "/dnm-arrests";
+"~^/doc/ai/202105-openai.*$" "/doc/reinforcement-learning/openai/index";
+"~^/doc/psychology/1943-maslow.pdf.*$" "https://psycnet.apa.org/journals/rev/50/4/370/";
+"~^/doc/www/youtube.com$" "https://www.youtube.com/";
+"~^/.*/plastination$" "/plastination";
+"~^/Hyperbolic-Time-Chamberisaboutth.*$" "/Hyperbolic-Time-Chamber";
+"~^/doc/sociology/%C3%82.*$" "/doc/sociology/index";
+"~^/doc/2008-minzenberg\.pdf.*$" "/doc/modafinil/2008-minzenberg.pdf";
+"~^/mistakees$" "/mistakes";
+"~^/wooden-pillow$" "/wood-pillow";
+"~^/dnr/conservation/CSP/Pages/default.aspx.*$" "https://dnr.illinois.gov/conservation/csp.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -19414,6 +19426,10 @@
 "~^/tembakikankoi.*$" "/static/404";
 "~^/realonlinelicence.*$" "/static/404";
 "~^/free-php.*$" "/static/404";
+"~^/infusions.*$" "/static/404";
+"~^/__nuxt_vite.*$" "/static/404";
+"~^/.*calc\.exe.*$" "/static/404";
+"~^/datuk.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
