--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13858,6 +13858,71 @@
 "~^/mistakees$" "/mistakes";
 "~^/wooden-pillow$" "/wood-pillow";
 "~^/dnr/conservation/CSP/Pages/default.aspx.*$" "https://dnr.illinois.gov/conservation/csp.html";
+"~^/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.htm$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/docs/newest/index.*$" " /doc/newest/index";
+"~^/search-pdf.*$" "/search#papers";
+"~^/Lhttp\.\*rem$" "/lorem";
+"~^/doc/www/evigetir.com/tips.html$" "https://evigetir.com/tips.html";
+"~^/doc/philosophy/%C2.*$" "/doc/philosophy/index";
+"~^/doc/nootropics/quantified-self/index$" "/doc/nootropic/quantified-self/index";
+"~^/static/img/logo/logo-whitebg-large-border.png-530px.png$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/Socks\?fbclid.*$" "/socks";
+"~^/.*/Google-shutdowns$" "/google-shutdown";
+"~^/index-theamericansoldier$" "/doc/psychology/1949-stouffer-theamericansoldier-v1-adjustmentduringarmylife.pdf";
+"~^/.*/Embryo-selection/$" "/embryo-selection";
+"~^/doc/technology/2020-ramesh.pdf%D1%81$" "/doc/technology/2020-ramesh.pdf";
+"~^/doc/statistics/decProceeding-of-the-Second-International-.*$" "/doc/statistics/decision/index";
+"~^/doc/sociology/2014-p07QQ5l0.*$" "/doc/sociology/index";
+"~^/doc/r\.\*/The-Erl-King$" "/fiction/erl-king";
+"~^/doc/rotten.com/library/bio/hackers/kevin-mitnick/index\.pdf.*$" "/doc/rotten.com/library/bio/hackers/kevin-mitnick/index.html";
+"~^/doc/psychology/KUzF.*$" "/doc/psychology/index";
+"~^/doc/psychology/2020-10-%C3%83%C6%92%C3%82%C2%B0.*$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/doc/.*/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/wikipedia-rss-archive-bot";
+"~^/doc/iq/1941-thurstone-factorialstudiesofintelligen$" "/doc/iq/1941-thurstone-factorialstudiesofintelligence.pdf";
+"~^/doc/2011-gwern-yourmorals.org/bigfive_process.php_files/like.html$" "/static/404";
+"~^/doc/2011-gwern-yourmorals.org/bigfive_process.php_files/all.js$" "/static/404";
+"~^/doc/2011-gwern-yourmorals.org/ajax-loader.gif$" "/static/404";
+"~^/CO2-Coi$" "/co2-coin";
+"~^/Coin-flip/$" "/coin-flip";
+"~^/danbooru2024$" "/danbooru2021#danbooru2020";
+"~^/doc/ai/poetry/2019-12-16-gpt21$" "/doc/ai/poetry/2019-12-16-gpt21.5b-poetry-samples-topp080.txt";
+"~^/doc/cat/2000bradshaw\.pdf.*$" "/doc/cat/psychology/2000-bradshaw.pdf";
+"~^/.*/Notes$" "/note/note";
+"~^/doc/2012-studerluethi\.pdf.*$" "/doc/dual-n-back/2012-studerluethi.pdf";
+"~^/doc/-economics/1688-delavega-confusionofconfusions\.pdf.*$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/economics/advertising/2019-674$" "/doc/economics/advertising/index";
+"~^/doc/mooreslaw-marketvolumelaw$" "/doc/economics/mooreslaw-marketvolumelaw.png";
+"~^/doc/fiction/science-fiction/1986-moore-watchmen-chapter12-watchmaker\.pdf.*$" "/doc/fiction/science-fiction/1986-moore-watchmen-chapter4-watchmaker.pdf";
+"~^/doc/iq/-1927-spearman-theabilitiesofman\.pdf.*$" "/doc/iq/1927-spearman-theabilitiesofman.pdf";
+"~^/docs.iq/2015-roth\.pdf.*$" "/doc/iq/2015-roth.pdf";
+"~^/doc/1999-kendrick\.pdf.*$" "/doc/modafinil/1999-kendrick.pdf";
+"~^/doc/2011-gwern-yourmorals.org/bigfive_process.php_files/facebook-logo.png$" "/doc/personal/2011-gwern-yourmorals.org/general_political_knowledge_process.php_files/facebook-logo.png";
+"~^/doc/1978-pascal\.pdf.*$" "/doc/psychology/1978-pascal.pdf";
+"~^/doc/psychology/2019-738$" "/doc/psychology/index";
+"~^/doc/psychology/2019-scherer.pdf10$" "/doc/psychology/2019-scherer.pdf";
+"~^/doc/psychology/neuroscience//2021-xu\.pdf.*$" "/doc/sociology/2021-xu.pdf";
+"~^/doc/spacedrepetiti$" "/doc/spaced-repetition/index";
+"~^/doc/statistics/2007-teigen\.pdf.*$" "/doc/statistics/bayes/2007-teigen.pdf";
+"~^/doc/statistics/2009-insua\.pdf.*$" "/doc/statistics/decision/2009-insua.pdf";
+"~^/education$" "/education-is-not-about-learning";
+"~^/default.htm$" "/index";
+"~^/Main.hs$" "/static/build/hakyll.hs";
+"~^/lSD-microdosing$" "/lsd-microdosing";
+"~^/silk$" "/silk-road";
+"~^/note/mlp$" "/note/fc";
+"~^/newsletter/YEAR/13$" "/newsletter/2020/13";
+"~^/note/notes$" "/note/notes";
+"~^/Plastination$" "/plastination";
+"~^/GPT-3Find$" "/gpt-3";
+"~^/Scanners/$" "/scanners";
+"~^/star$" "/startup-idea";
+"~^/SMPY/$" "/smpy";
+"~^/static/img/icon/swisspiralroll.svg$" "/static/img/ornament/swissspiralroll.svg";
+"~^/Redirects.hs$" "/static/redirect/nginx.conf";
+"~^/Timestamping/$" "/timestamping";
+"~^/Tool-AII$" "/tool-ai";
+"~^/Tool-AI/$" "/tool-ai";
+"~^/zen-and-the-Art-of-Bicycle-Maintenance$" "/zen-and-the-art-of-bicycle-maintenance";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
