--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9470,3 +9470,4 @@ default "";
 "~^/doc/psychology/linguistics/2019-antoniou.pdf.*$" "/doc/psychology/linguistics/bilingual/2019-antoniou.pdf";
 "~^/doc/psychology/linguistics/2020-nichols.pdf.*$" "/doc/psychology/linguistics/bilingual/2020-nichols.pdf";
 "~^/doc/psychology/1972-larson-becomingbilingual.pdf.*$" "/doc/psychology/linguistics/bilingual/1972-larson-becomingbilingual.pdf";
+"~^/doc/psychology/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html.*$" "/doc/psychology/neuroscience/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html";
