--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13923,6 +13923,12 @@
 "~^/Tool-AII$" "/tool-ai";
 "~^/Tool-AI/$" "/tool-ai";
 "~^/zen-and-the-Art-of-Bicycle-Maintenance$" "/zen-and-the-art-of-bicycle-maintenance";
+"~^/id.quora.com/profile/Gerubok-COM.*$" "https://id.quora.com/profile/Gerubok-COM";
+"~^/Candy-Japan\:.*$" "/candy-japan";
+"~^/doc/darknetmarket/2019-04-22-deepdotweb-dnmlist.html.*$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/GANs）.*$" "/gans";
+"~^/now$" "/index#newest";
+"~^/mailloten.*$" "/static/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
