--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9471,3 +9471,5 @@ default "";
 "~^/doc/psychology/linguistics/2020-nichols.pdf.*$" "/doc/psychology/linguistics/bilingual/2020-nichols.pdf";
 "~^/doc/psychology/1972-larson-becomingbilingual.pdf.*$" "/doc/psychology/linguistics/bilingual/1972-larson-becomingbilingual.pdf";
 "~^/doc/psychology/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html.*$" "/doc/psychology/neuroscience/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html";
+"~^/doc/economics/1999-prendergast.pdf.*$" "/doc/economics/mechanism-design/1999-prendergast.pdf";
+"~^/doc/economics/2001-bertrand.pdf.*$" "/doc/economics/mechanism-design/2001-bertrand.pdf";
