--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -729,11 +729,11 @@ server {
         rewrite ^/doc/terrorism/(?<old>.*)$ /doc/crime/terrorism/$old permanent;
         rewrite ^/doc/statistics/crime/terrorism/(?<old>.*)$ /doc/crime/terrorism/$old permanent;
         rewrite ^/doc/genetics/selection/dysgenics/(?<old>.*)$ /doc/genetics/selection/natural/human/dysgenics/$old permanent;
-        rewrite ^/doc/genetics/selection/index-selection/(?<old>.*)$ doc/genetics/selection/artificial/index-selection/$old permanent;
-        rewrite ^/doc/genetics/selection/apple/(?<old>.*)$ doc/genetics/selection/artificial/apple/$old permanent;
-        rewrite ^/doc/genetics/correlation/(?<old>.*)$ doc/genetics/heritable/correlation/$old permanent;
-        rewrite ^/doc/linkrot/(?<old>.*)$ doc/cs/linkrot/$old permanent;
-        rewrite ^/doc/advertising/(?<old>.*)$ doc/economics/advertising/$old permanent;
+        rewrite ^/doc/genetics/selection/index-selection/(?<old>.*)$ /doc/genetics/selection/artificial/index-selection/$old permanent;
+        rewrite ^/doc/genetics/selection/apple/(?<old>.*)$ /doc/genetics/selection/artificial/apple/$old permanent;
+        rewrite ^/doc/genetics/correlation/(?<old>.*)$ /doc/genetics/heritable/correlation/$old permanent;
+        rewrite ^/doc/linkrot/(?<old>.*)$ /doc/cs/linkrot/$old permanent;
+        rewrite ^/doc/advertising/(?<old>.*)$ /doc/economics/advertising/$old permanent;
         rewrite ^/xf/BL_Image/(?<original>.*)$ https://www.bluelight.org/xf/BL_Image/$original permanent;
         rewrite ^/doc/sf/(?<old>.*)$ /doc/fiction/science-fiction/$old permanent;
         rewrite ^/doc/ai/alphafold/(?<old>.*)$ /doc/ai/nn/transformer/alphafold/$old permanent;
