--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -849,6 +849,8 @@ server {
         rewrite ^/doc/psychology/european-journal-of-parapsychology/(?<original>.*)$ /doc/psychology/parapsychology/european-journal-of-parapsychology/$original permanent;
         rewrite ^/doc/www/i.reddit.com/(?<old>.*)$ /doc/www/old.reddit.com/$old permanent;
         rewrite ^/doc/reinforcement-learning/brain-imitation-learning/(?<old>.*)$ /doc/reinforcement-learning/imitation-learning/brain-imitation-learning/$old permanent;
+        rewrite ^/doc/www/(?<domain>.+)/.+\.html/favicon.ico$ https://$domain/favicon.ico permanent; # match domain+snapshot examples like `/doc/www/edwardtufte.github.io/e43d8239ed3fa1d513e2b4d071b6a7c0c8a98bff.html/favicon.ico`
+        rewrite ^/doc/www/(?<domain>.+\..+)/favicon.ico$ https://$domain/favicon.ico permanent; # match domain examples like `/doc/www/languagelog.ldc.upenn.edu/favicon.ico`
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
