--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9473,3 +9473,5 @@ default "";
 "~^/doc/psychology/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html.*$" "/doc/psychology/neuroscience/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html";
 "~^/doc/economics/1999-prendergast.pdf.*$" "/doc/economics/mechanism-design/1999-prendergast.pdf";
 "~^/doc/economics/2001-bertrand.pdf.*$" "/doc/economics/mechanism-design/2001-bertrand.pdf";
+"~^/doc/psychology/2006-02-05-nytimes-thatwhichdoesnotkillmemakesmestranger.html.*$" "/doc/psychiatry/2006-02-05-nytimes-thatwhichdoesnotkillmemakesmestranger.html";
+"~^/doc/genetics/heritable/2021-akbari.pdf.*$" "/doc/genetics/heritable/rare/2021-akbari.pdf";
