+; +redirect chasing updates

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -802,6 +802,9 @@ server {
         rewrite ^/(?<prefix>.*)%23(?<suffix>.*)$ /$prefix permanent; # strip 'foo.pdf#bar' encoded into the URL
         rewrite ^/(?<prefix>.*)\&quot.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)\&embed.*$ /$prefix permanent;
+        rewrite ^/(?<prefix>.*)\&target.*$ /$prefix permanent;
+        rewrite ^/(?<prefix>.*)\?nig.*$ /$prefix permanent;
+        rewrite ^/(?<prefix>.*)\?sourc.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)-https:.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)-http:.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)https:.*$ /$prefix permanent;
@@ -819,6 +822,8 @@ server {
         rewrite ^/tatic/(?<old>.*)$ /static/$old permanent;
         rewrite ^/doc/anime/eva/anime/eva/(?<old>.*)$ /doc/anime/eva/$old permanent;
         rewrite ^/(?<old>.*)/index/wp$ /$old/index permanent;
+        rewrite ^/doc/(?<dir>.*)/docs?/(?<file>.*)$ /doc/$dir/$file permanent;
+        rewrite ^/pmc/(?<old>.*)$ https://www.ncbi.nlm.nih.gov/pmc/$old permanent;
 
         # rewrite LW links like `/posts/5yFRd3cjLpm3Nd6Di/argument-screens-off-authority` (17 character ID):
         rewrite ^(?<old>/posts/[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]/[a-z-]+$) https://lesswrong.com$old permanent;
@@ -851,12 +856,9 @@ server {
         rewrite ^/doc/reinforcement-learning/brain-imitation-learning/(?<old>.*)$ /doc/reinforcement-learning/imitation-learning/brain-imitation-learning/$old permanent;
         rewrite ^/doc/www/(?<domain>.+)/.+\.html/favicon.ico$ https://$domain/favicon.ico permanent; # match domain+snapshot examples like `/doc/www/edwardtufte.github.io/e43d8239ed3fa1d513e2b4d071b6a7c0c8a98bff.html/favicon.ico`
         rewrite ^/doc/www/(?<domain>.+\..+)/favicon.ico$ https://$domain/favicon.ico permanent; # match domain examples like `/doc/www/languagelog.ldc.upenn.edu/favicon.ico`
+        rewrite ^/(?<original>.*)/wp-admin/css/.*$ /$original permanent;
 
-        # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
-        # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
-        # rewrite ^/metadata/annotations/http\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/http%3A%2F%2F$original permanent;
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
-        # rewrite ^/metadata/annotations/(?<original>[A-Z].*) /metadata/annotation/%2F$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
 
         ## it's very hard to fix broken '#' anchors since it's client-side, the web server isn't support to see it
