--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14349,7 +14349,7 @@
 "~^/about-us.*$" "/me";
 "~^/about-and-contact.*$" "/links#contact";
 "~^/doc/longevity/2019-debaco.*$" "/doc/longevity/2019-decabo.pdf";
-"~^/docs/iq/2016-03-takayama.*$" "/scaling-hypothesis";
+"~^/doc.*/iq/2016-03-takayama.*$" "/scaling-hypothesis";
 "~^/tool-a$" "/tool-ai";
 "~^/doc/iq/MTk.*$" "/doc/iq/index";
 "~^/doc/nicotine/1996-foulds.pdf1$" "/doc/nicotine/1996-foulds.pdf";
@@ -14413,6 +14413,12 @@
 "~^/Simulatin-inferences$" "/simulation-inferences";
 "~^/doc/cs/algorithm/favicon.ico$" "/static/img/favicon.ico";
 "~^/favicons/$" "/static/img/favicon.png";
+"~^/Image-Net-Roulette.*$" "https://www.chiark.greenend.org.uk/~ijackson/2019/ImageNet-Roulette-cambridge-2017.html";
+"~^/mulberry/.*$" "/fiction/mulberry";
+"~^/doc/2005-aronen.pdf.*$" "/doc/dual-n-back/2005-aronen.pdf";
+"~^/.*karadagsirketkurma.*$" "/static/404";
+"~^/dmer.org.*$" "/static/404";
+"~^/.*/dmer.org.*$" "/static/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
