--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14419,6 +14419,10 @@
 "~^/.*karadagsirketkurma.*$" "/static/404";
 "~^/dmer.org.*$" "/static/404";
 "~^/.*/dmer.org.*$" "/static/404";
+"~^/ann$" "/aunn";
+"~^/unn$" "/aunn";
+"~^/aun$" "/aunn";
+"~^/A[Uu][Nn][Nn]$" "/aunn";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
