--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -706,6 +706,7 @@ server {
         rewrite ^/metadata/annotations/similar/(?<original>.*)$ /metadata/annotation/similar/$original permanent;
         rewrite ^/doc/psycology/(?<original>.*)$ /doc/psychology/$original permanent;
         rewrite ^/doc/www/pkhungurn\.github\.io/data/videos/(?<original>.*)$ https://pkhungurn.github.io/data/videos/$original permanent;
+        rewrite ^/doc/www/semianalysis.com/(?<original>.*)$ /doc/www/www.semianalysis.com/$original permanent;
         rewrite ^/(?<original>doc/.*),pdf$ /$original.pdf permanent;
         rewrite ^/(?<original>.*)%C3%A7$ /$original permanent;
         rewrite ^/(?<original>.*)/index/index$ /$original/index permanent;
