--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9492,3 +9492,12 @@ default "";
 "~^/doc/design/2021-05-20-rachelkowert-standuptrexmeme-etal.jpg.*$" "/doc/design/typography/subscript/2021-05-20-rachelkowert-standuptrexmeme-etal.jpg";
 "~^/doc/design/2021-03-25-gwern-etal-midlinehorizontalellipsis-demo.png.*$" "/doc/design/typography/subscript/2021-03-25-gwern-etal-midlinehorizontalellipsis-demo.png";
 "~^/doc/design/2020-11-29-gwern-subscript-cssmockup.png.*$" "/doc/design/typography/subscript/2020-11-29-gwern-subscript-cssmockup.png";
+"~^/doc/darknet-market/2021-ursani.pdf.*$" "/doc/darknet-market/dnm-archive/2021-ursani.pdf";
+"~^/doc/psychology/cognitive-bias/illusion-of-depth/1994-cottrell.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1994-cottrell.pdf";
+"~^/doc/psychology/cognitive-bias/illusion-of-depth/1996-winer-3.pdf.*$" "/1996-winer-3.pdf";
+"~^/doc/psychology/cognitive-bias/illusion-of-depth/1996-winer-2.pdf.*$" "/1996-winer-2.pdf";
+"~^/doc/psychology/cognitive-bias/illusion-of-depth/1996-winer.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer.pdf";
+"~^/doc/psychology/cognitive-bias/illusion-of-depth/2001-gregg.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/2001-gregg.pdf";
+"~^/doc/psychology/cognitive-bias/illusion-of-depth/2002-winer.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/2002-winer.pdf";
+"~^/1996-winer-2.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer-2.pdf";
+"~^/1996-winer-3.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer-3.pdf";
