--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -847,6 +847,7 @@ server {
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
         rewrite ^/.*ttps\:\/\/gwern\.net/(?<original>.*) /$original permanent;
         rewrite ^/doc/cryonic/(?<original>.*)$ /doc/cryonics/$original permanent;
+        rewrite ^/doc/philosophy/frank-p-ramsey/(?<original>.*)$ /doc/philosophy/frank-ramsey/$original permanent;
         rewrite ^/(?<original>doc/.*)/3[Dd]$ /$original/index permanent;
         rewrite ^/(?<original>.*)\)$ /$original permanent;
         rewrite ^/(?<original>.*)\[.*$ /$original permanent;
