--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9501,3 +9501,4 @@ default "";
 "~^/doc/psychology/cognitive-bias/illusion-of-depth/2002-winer.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/2002-winer.pdf";
 "~^/1996-winer-2.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer-2.pdf";
 "~^/1996-winer-3.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer-3.pdf";
+"~^/doc/psychology/2004-forrester.pdf.*$" "/doc/psychiatry/2004-forrester.pdf";
