sync: syntax-highlighting source code: +CSS/standalone HTML options so the .html versions render nicely on their own outside popups (makes them more linkable to/viewably by third-parties)

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8978,8 +8978,8 @@
 "~^/[a-zA-Z]+/static/css/fonts.css.*$" "/static/css/fonts.css";
 "~^/static/css/fonts.css.html.html$" "/static/css/fonts.css.html";
 "~^/static/css/fonts-versioned.css.html.*$" "/static/css/fonts-VERSIONED.css.html";
-"~^/static/css/colors.css$" "/static/css/include/colors.css";
-"~^/static/css/colors.css.html.*$" "/static/css/include/colors.css.html";
+"~^/static/css/include/colors.css$" "/static/css/colors.css";
+"~^/static/css/include/colors.css.html.*$" "/static/css/colors.css.html";
 "~^/static/css/dark-mode-adjustments.css.html.*$" "/static/css/include/components/dark-mode-adjustments.css.html";
 "~^/static/css/colors-dark.css.*$" "/static/css/include/dark-mode-GENERATED.css";
 "~^/static/css/dark-mode.css.html.*$" "/static/css/include/dark-mode-GENERATED.css.html";
