--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -860,6 +860,73 @@ server {
         rewrite ^/doc/www/(?<domain>.+\..+)/favicon.ico$ https://$domain/favicon.ico permanent; # match domain examples like `/doc/www/languagelog.ldc.upenn.edu/favicon.ico`
         rewrite ^/(?<original>.*)/wp-admin/css/.*$ /$original permanent;
 
+        # fix en masse all of the doc-prefix-less file hosting errors that keep happening (not least by myself when carelessly linking people to documents), by rewriting for all top-level doc/foo/ paths to date:
+        # NOTE: must be careful to skip top-level directories that do in fact exist (eg. 'zeo', 'nootropic', 'fiction')
+        rewrite ^/ai/(?<original>.*)$ /doc/ai/$original permanent;
+        rewrite ^/algernon/(?<original>.*)$ /doc/algernon/$original permanent;
+        rewrite ^/anime/(?<original>.*)$ /doc/anime/$original permanent;
+        rewrite ^/biology/(?<original>.*)$ /doc/biology/$original permanent;
+        rewrite ^/bitcoin/(?<original>.*)$ /doc/bitcoin/$original permanent;
+        rewrite ^/borges/(?<original>.*)$ /doc/borges/$original permanent;
+        rewrite ^/cat/(?<original>.*)$ /doc/cat/$original permanent;
+        rewrite ^/co2/(?<original>.*)$ /doc/co2/$original permanent;
+        rewrite ^/creatine/(?<original>.*)$ /doc/creatine/$original permanent;
+        rewrite ^/crime/(?<original>.*)$ /doc/crime/$original permanent;
+        rewrite ^/cryonics/(?<original>.*)$ /doc/cryonics/$original permanent;
+        rewrite ^/cs/(?<original>.*)$ /doc/cs/$original permanent;
+        rewrite ^/culture/(?<original>.*)$ /doc/culture/$original permanent;
+        rewrite ^/darknet-market/(?<original>.*)$ /doc/darknet-market/$original permanent;
+        rewrite ^/dataset/(?<original>.*)$ /doc/dataset/$original permanent;
+        rewrite ^/design/(?<original>.*)$ /doc/design/$original permanent;
+        rewrite ^/dog/(?<original>.*)$ /doc/dog/$original permanent;
+        rewrite ^/dual-n-back/(?<original>.*)$ /doc/dual-n-back/$original permanent;
+        rewrite ^/economics/(?<original>.*)$ /doc/economics/$original permanent;
+        rewrite ^/exercise/(?<original>.*)$ /doc/exercise/$original permanent;
+        rewrite ^/existential-risk/(?<original>.*)$ /doc/existential-risk/$original permanent;
+        rewrite ^/food/(?<original>.*)$ /doc/food/$original permanent;
+        rewrite ^/genetics/(?<original>.*)$ /doc/genetics/$original permanent;
+        rewrite ^/gwern.net-gitstats/(?<original>.*)$ /doc/gwern.net-gitstats/$original permanent;
+        rewrite ^/history/(?<original>.*)$ /doc/history/$original permanent;
+        rewrite ^/insight-porn/(?<original>.*)$ /doc/insight-porn/$original permanent;
+        rewrite ^/interview/(?<original>.*)$ /doc/interview/$original permanent;
+        rewrite ^/iodine/(?<original>.*)$ /doc/iodine/$original permanent;
+        rewrite ^/iq/(?<original>.*)$ /doc/iq/$original permanent;
+        rewrite ^/japan/(?<original>.*)$ /doc/japan/$original permanent;
+        rewrite ^/law/(?<original>.*)$ /doc/law/$original permanent;
+        rewrite ^/lesswrong-survey/(?<original>.*)$ /doc/lesswrong-survey/$original permanent;
+        rewrite ^/longevity/(?<original>.*)$ /doc/longevity/$original permanent;
+        rewrite ^/long-now/(?<original>.*)$ /doc/long-now/$original permanent;
+        rewrite ^/marijuana/(?<original>.*)$ /doc/marijuana/$original permanent;
+        rewrite ^/math/(?<original>.*)$ /doc/math/$original permanent;
+        rewrite ^/melatonin/(?<original>.*)$ /doc/melatonin/$original permanent;
+        rewrite ^/meta/(?<original>.*)$ /doc/meta/$original permanent;
+        rewrite ^/modafinil/(?<original>.*)$ /doc/modafinil/$original permanent;
+        rewrite ^/music/(?<original>.*)$ /doc/music/$original permanent;
+        rewrite ^/newest/(?<original>.*)$ /doc/newest/$original permanent;
+        rewrite ^/nicotine/(?<original>.*)$ /doc/nicotine/$original permanent;
+        rewrite ^/personal/(?<original>.*)$ /doc/personal/$original permanent;
+        rewrite ^/philosophy/(?<original>.*)$ /doc/philosophy/$original permanent;
+        rewrite ^/politics/(?<original>.*)$ /doc/politics/$original permanent;
+        rewrite ^/psychedelic/(?<original>.*)$ /doc/psychedelic/$original permanent;
+        rewrite ^/psychiatry/(?<original>.*)$ /doc/psychiatry/$original permanent;
+        rewrite ^/psychology/(?<original>.*)$ /doc/psychology/$original permanent;
+        rewrite ^/radiance/(?<original>.*)$ /doc/radiance/$original permanent;
+        rewrite ^/reinforcement-learning/(?<original>.*)$ /doc/reinforcement-learning/$original permanent;
+        rewrite ^/rotten.com/(?<original>.*)$ /doc/rotten.com/$original permanent;
+        rewrite ^/science/(?<original>.*)$ /doc/science/$original permanent;
+        rewrite ^/sociology/(?<original>.*)$ /doc/sociology/$original permanent;
+        rewrite ^/statistics/(?<original>.*)$ /doc/statistics/$original permanent;
+        rewrite ^/survey/(?<original>.*)$ /doc/survey/$original permanent;
+        rewrite ^/tea/(?<original>.*)$ /doc/tea/$original permanent;
+        rewrite ^/technology/(?<original>.*)$ /doc/technology/$original permanent;
+        rewrite ^/touhou/(?<original>.*)$ /doc/touhou/$original permanent;
+        rewrite ^/traffic/(?<original>.*)$ /doc/traffic/$original permanent;
+        rewrite ^/transhumanism/(?<original>.*)$ /doc/transhumanism/$original permanent;
+        rewrite ^/tutorial/(?<original>.*)$ /doc/tutorial/$original permanent;
+        rewrite ^/vitamin-d/(?<original>.*)$ /doc/vitamin-d/$original permanent;
+        rewrite ^/wikipedia/(?<original>.*)$ /doc/wikipedia/$original permanent;
+        rewrite ^/www/(?<original>.*)$ /doc/www/$original permanent;
+
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
 
