big redirect/WP/linklive update triggered by ACX migration; +

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -694,7 +694,7 @@ server {
         rewrite ^/(?<original>pubmed/.*)$ https://www.ncbi.nlm.nih.gov/$original permanent;
         rewrite ^/(?<original>pmc/articles/.*)$ https://www.ncbi.nlm.nih.gov/$original permanent;
         rewrite ^/(?<original>.*)”$ /$original permanent;
-        rewrite ^/(?<original>.*\.html)[0-9]+$ /$original permanent;
+        rewrite ^/(?<original>.*\.html)[0-46-9]+$ /$original permanent;
         rewrite ^/(?<original>.*/index)/index.html /$original permanent;
         rewrite ^/doc/pyschology/(?<original>.*)$ /doc/psychology/$original permanent;
         rewrite ^/(?<original>static/font/.*.ttf).*-format.*$ /$original permanent;
