--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -7032,7 +7032,7 @@
 "~^/doc/japan/2001-debary-sourcesofjapanesetradition\.pdf.*$" "http://gen.lib.rus.ec/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
 "~^/doc/cs/1985-feynman-surelyyourejokingmrfeynman-ch1\.pdf.*$" "http://gen.lib.rus.ec/search.php?req=Surely+You%27re+Joking%2C+Mr+Feynman&lg_topic=libgen&open=0&view=simple&res=25&phrase=1&column=def"; # not DMCA, just an anon looking for the other chapters (which I don't host)
 "~^/doc/www/highscalability.com/%2Fblog%2F2012%2F3%2F12%2Fgoogle-taming-the-long-latency-tail-when-more-machines-equal.html.*" "http://highscalability.com/blog/2012/3/12/google-taming-the-long-latency-tail-when-more-machines-equal.html";
-"~^/2011-.*/static/js/footnotes.js$" "http://ignorethecode.net/blog/2010/04/20/footnotes/";
+"~^/2011-.*/static/js/footnotes.js$" "https://ignorethecode.net/blog/2010/04/20/footnotes/";
 "~^http://ip.ws.126.net/ipquery.*$" "http://ip.ws.126.net/ipquery";
 "~^/static/build/itsjustuskids.com.*" "http://itsjustuskids.com/";
 "~^/webpages/l/a/lagriffedulion.f2s.com/public.*$" "http://lagriffedulion.f2s.com/";
@@ -12411,7 +12411,7 @@
 "~^/doc/201$" "/doc/index";
 "~^/doc/sr/=3D.*$" "/doc/darknet-market/silk-road/1/index";
 "~^/doc/ChangeLog.txt$" "/changelog";
-"~^/static/js/footnotes.js$" "http://ignorethecode.net/blog/2010/04/20/footnotes/";
+"~^/static/js/footnotes.js$" "https://ignorethecode.net/blog/2010/04/20/footnotes/";
 "~^/.*/AB-testing$" "/ab-testing";
 "~^/Life-contractW.*$" "/life-contract";
 "~^/doc/statistics/dec...994-benter\.pdf.*$" "/doc/statistics/decision/1994-benter.pdf";
@@ -14827,7 +14827,6 @@
 "~^/RNN-metadat$" "/rnn-metadata";
 "~^/side-Notes$" "/sidenote";
 "~^/static/css/include/dark-mode-GENERATED.css$" "/static/css/dark-mode-GENERATED.css";
-"~^/static/*.*.html$" "/static/template/index";
 "~^/The-Melancholy-Of-Kyon$" "/the-melancholy-of-kyon";
 "~^/nootropic/Newton$" "/newton";
 "~^/DALL-E-demos$" "https://openai.com/blog/dall-e/";
@@ -19173,7 +19172,7 @@
 "~^/ross-art.su%2Fb.*$" "/static/404.html";
 "~^/vibesbullet.com.*$" "/static/404.html";
 "~^/version.*$" "/static/404.html";
-"~^/static/js-build/libs/html5shiv.*$" "/static/404.html";
+"~^/static/.*/html5shiv.*$" "/static/404.html";
 "~^/ChAI8IialgYQncr.*$" "/static/404.html";
 "~^/berufsbekleidung-medizin-onlineshop.de.*$" "/static/404.html";
 "~^/doc/anime/eva/privmsg.php.*$" "/static/404.html";
