--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9502,3 +9502,4 @@ default "";
 "~^/1996-winer-2.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer-2.pdf";
 "~^/1996-winer-3.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer-3.pdf";
 "~^/doc/psychology/2004-forrester.pdf.*$" "/doc/psychiatry/2004-forrester.pdf";
+"~^/doc/cs/1997-bejan.pdf.*$" "/doc/cs/hardware/1997-bejan.pdf";
