--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -254,7 +254,7 @@ server {
         rewrite ^/v/(?<original>.*) /$original permanent;
         rewrite ^/v2/(?<original>.*) /$original permanent;
         rewrite ^/articles/(?<original>.*) /$original permanent;
-        rewrite ^//(?<original>.*) /$original permanent;
+        rewrite ^/\/(?<original>.*)$ /$original permanent;
         rewrite ^/doc/sr/\^/live/(?<original>.*) /$original permanent;
         rewrite ^/doc/www/old.reddit.com/\^/live/(?<original>.*) /$original permanent;
         rewrite ^/doc/www/market.android.com/(?<original>.*) /$original permanent;
@@ -367,8 +367,9 @@ server {
         rewrite ^/newsletter/2020/%26amp\;quot\;https\:\/\/.*/(?<original>.*) /$original permanent;
         rewrite ^/(?<original>.*).djvu$ /$original.pdf permanent;
         rewrite ^/(?<original>.*)/index/$ /$original/index permanent;
-        rewrite ^/(?<original>.*)/.html/$ /$original/.html permanent;
-        rewrite ^/(?<original>.*)/.pdf/$ /$original/.pdf permanent;
+        rewrite ^/(?<original>.*)/.html/$ /$original.html permanent;
+        rewrite ^/(?<original>.*)/.pdf/$ /$original.pdf permanent;
+        rewrite ^/(?<original>.*)/.pdff$ /$original.pdf permanent;
 
         ## rewrite mistaken newsletter URLs like '/newsletter/2019/7' to '/newsletter/2019/07':
         rewrite ^/newsletter/(?<originalYear>20[0-5][0-9])/(?<originalMonth>[0-9])$ /newsletter/$originalYear/0$originalMonth permanent;
