--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9503,3 +9503,4 @@ default "";
 "~^/1996-winer-3.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/extramission/1996-winer-3.pdf";
 "~^/doc/psychology/2004-forrester.pdf.*$" "/doc/psychiatry/2004-forrester.pdf";
 "~^/doc/cs/1997-bejan.pdf.*$" "/doc/cs/hardware/1997-bejan.pdf";
+"~^/doc/ai/2017-koehn-figure3-bleuscoreswithvaryingamountsoftrainingdata.png.*$" "/doc/ai/scaling/2017-koehn-figure3-bleuscoreswithvaryingamountsoftrainingdata.png";
