--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9504,3 +9504,11 @@ default "";
 "~^/doc/psychology/2004-forrester.pdf.*$" "/doc/psychiatry/2004-forrester.pdf";
 "~^/doc/cs/1997-bejan.pdf.*$" "/doc/cs/hardware/1997-bejan.pdf";
 "~^/doc/ai/2017-koehn-figure3-bleuscoreswithvaryingamountsoftrainingdata.png.*$" "/doc/ai/scaling/2017-koehn-figure3-bleuscoreswithvaryingamountsoftrainingdata.png";
+"~^/doc/sociology/1999-campbell.pdf.*$" "/doc/sociology/intrasexual-aggression/1999-campbell.pdf";
+"~^/doc/sociology/2022-bakolas.pdf.*$" "/doc/sociology/intrasexual-aggression/2022-bakolas.pdf";
+"~^/doc/sociology/2022-bradshaw.pdf.*$" "/doc/sociology/intrasexual-aggression/2022-bradshaw.pdf";
+"~^/doc/sociology/2020-wang-2.pdf.*$" "/doc/sociology/intrasexual-aggression/2020-wang-2.pdf";
+"~^/doc/sociology/2021-arnocky.pdf.*$" "/doc/sociology/intrasexual-aggression/2021-arnocky.pdf";
+"~^/doc/sociology/2020-gerhards.pdf.*$" "/doc/sociology/intrasexual-aggression/2020-gerhards.pdf";
+"~^/doc/sociology/1993-boehm.pdf.*$" "/doc/sociology/intrasexual-aggression/1993-boehm.pdf";
+"~^/doc/sociology/2022-harbke.pdf.*$" "/doc/sociology/intrasexual-aggression/2022-harbke.pdf";
