--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14859,6 +14859,10 @@
 "~^/[NnMm]emex.*" "/nenex";
 "~^/[NnMm]emnex.*" "/nenex";
 "~^/[NnMm]enmex.*" "/nenex";
+"~^/[Ee]lon-[Mm]usk.*$" "/note/musk";
+"~^/[Mm]usk-.*$" "/note/musk";
+"~^/note/[Ee]lon.*$" "/note/musk";
+"~^/note/Musk.*$" "/note/musk";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
