--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9512,3 +9512,5 @@ default "";
 "~^/doc/sociology/2020-gerhards.pdf.*$" "/doc/sociology/intrasexual-aggression/2020-gerhards.pdf";
 "~^/doc/sociology/1993-boehm.pdf.*$" "/doc/sociology/intrasexual-aggression/1993-boehm.pdf";
 "~^/doc/sociology/2022-harbke.pdf.*$" "/doc/sociology/intrasexual-aggression/2022-harbke.pdf";
+"~^/doc/design/2022-10-31-gwern-gwernnet-darkmode-halloweenmode.png.*$" "/doc/cs/css/2022-10-31-gwern-gwernnet-darkmode-halloweenmode.png";
+"~^/doc/cs/r/20190703-20200102-gwern-traffic-history.png.*$" "/doc/traffic/20190703-20200102-gwern-traffic-history.png";
