--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -612,6 +612,7 @@ server {
         rewrite ^/wholesomeanimememes/(?<original>.*)$ https://old.reddit.com/r/wholesomeanimememes/$original permanent;
         rewrite ^/wholesomeanimemes/(?<original>.*)$ https://old.reddit.com/r/wholesomeanimemes/$original permanent;
         rewrite ^/wikipedia/(?<original>.*)$ https://old.reddit.com/r/wikipedia/$original permanent;
+        rewrite ^/conspiracy/(?<original>.*)$ https://old.reddit.com/r/conspiracy/$original permanent;
 
         rewrite ^/(?<original>.*/dp/B.*)$ https://amazon.com/$original permanent; # eg. '/Miracle-Philadelphia-Constitutional-Convention-September/dp/B0007ELQH0'
         rewrite ^/(?<original>doc/www/.*)\.pdf%23(?<anchor>[a-z0-9=]+)$ /$original.pdf\#$anchor permanent;
