--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -808,6 +808,7 @@ server {
         rewrite ^/(?<prefix>.*)\&target.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)\?nig.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)\?sourc.*$ /$prefix permanent;
+        rewrite ^/(?<prefix>.*)\?backlinkTarget.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)-https:.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)-http:.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)https:.*$ /$prefix permanent;
