--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9514,3 +9514,12 @@ default "";
 "~^/doc/sociology/2022-harbke.pdf.*$" "/doc/sociology/intrasexual-aggression/2022-harbke.pdf";
 "~^/doc/design/2022-10-31-gwern-gwernnet-darkmode-halloweenmode.png.*$" "/doc/cs/css/2022-10-31-gwern-gwernnet-darkmode-halloweenmode.png";
 "~^/doc/cs/r/20190703-20200102-gwern-traffic-history.png.*$" "/doc/traffic/20190703-20200102-gwern-traffic-history.png";
+"~^/doc/traffic/2023-08-21-gwern-abtest-indentjustifysitetraffictimeseries.png.*$" "/doc/traffic/2023-08-21-gwern-abtest-indentjustificationsitetraffictimeseries.png";
+"~^/doc/psychology/2021-obrien.pdf.*$" "/doc/psychology/cognitive-bias/2021-obrien.pdf";
+"~^/doc/ai/nn/transformer/2019-liu-table4-robertabenefitsfromscalingdatasets10xoverbert.png.*$" "/doc/ai/scaling/2019-liu-table4-robertabenefitsfromscalingdatasets10xoverbert.png";
+"~^/doc/ai/nn/transformer/2020-08-11-gwern-meme-twoastronauts-hopfieldnetworksareallyouneed.png.*$" "/doc/ai/nn/transformer/attention/2020-08-11-gwern-meme-twoastronauts-hopfieldnetworksareallyouneed.png";
+"~^/doc/ai/nn/transformer/2021-hu-figure1-lemontransformerscalingonmscocoimagecaptioning.png.*$" "/doc/ai/scaling/2021-hu-figure1-lemontransformerscalingonmscocoimagecaptioning.png";
+"~^/doc/ai/nn/transformer/2021-hu-figure2-a-datascalingfinetuningperformanceonmscoco.png.*$" "/doc/ai/scaling2021-hu-figure2-a-datascalingfinetuningperformanceonmscoco.png";
+"~^/doc/ai/scaling2021-hu-figure2-a-datascalingfinetuningperformanceonmscoco.png.*$" "/doc/ai/scaling/2021-hu-figure2-a-datascalingfinetuningperformanceonmscoco.png";
+"~^/doc/fiction/gene-wolfe/1980-leguin-edge13newtalesfromtheborderlandsoftheimagination.pdf.*$" "/doc/fiction/gene-wolfe/1980-leguin-edges13newtalesfromtheborderlandsoftheimagination.pdf";
+"~^/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications.pdf.*$" "/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-1.pdf";
