--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9553,3 +9553,4 @@ default "";
 "~^/doc/genetics/heritable/1990-bouchard.pdf.*$" "/doc/genetics/heritable/1990-bouchard-2.pdf";
 "~^/doc/design/2001-murata-1.pdf.*$" "/doc/design/2001-murata.pdf";
 "~^/doc/iq/2019-jung.pdf.*$" "/doc/iq/2019-jung-2.pdf";
+"~^/doc/ai/nn/adversarial/2013-goldstein-figure1-experimentaleffectsofadqualityonwillingnesstopay.png.*$" "/doc/economics/advertising/2013-goldstein-figure1-experimentaleffectsofadqualityonwillingnesstopay.png";
