--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9554,3 +9554,5 @@ default "";
 "~^/doc/design/2001-murata-1.pdf.*$" "/doc/design/2001-murata.pdf";
 "~^/doc/iq/2019-jung.pdf.*$" "/doc/iq/2019-jung-2.pdf";
 "~^/doc/ai/nn/adversarial/2013-goldstein-figure1-experimentaleffectsofadqualityonwillingnesstopay.png.*$" "/doc/economics/advertising/2013-goldstein-figure1-experimentaleffectsofadqualityonwillingnesstopay.png";
+"~^/doc/cs/js/2023-09-14-gwernnet-popups-allpopuptypes.png.*$" "/doc/cs/js/2023-09-14-gwern-gwernnet-popups-allpopuptypes.png";
+"~^/doc/cs/js/2023-09-14-gwernnet-popups-allpopuptypes-meme-therearemanydoorsedboysyes.png.*$" "/doc/cs/js/2023-09-14-gwern-gwernnet-popups-allpopuptypes-meme-therearemanydoorsedboysyes.png";
