--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -929,6 +929,7 @@ server {
         rewrite ^/vitamin-d/(?<original>.*)$ /doc/vitamin-d/$original permanent;
         rewrite ^/wikipedia/(?<original>.*)$ /doc/wikipedia/$original permanent;
         rewrite ^/www/(?<original>.*)$ /doc/www/$original permanent;
+        rewrite ^/doc/www/nitter.moomoo.me/(?<original>.*)$ /doc/www/nitter.net/$original permanent;
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
